--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,8 @@
 body {
   padding: 0;
   margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   * {
     box-sizing: border-box;
   }
@@ -8,8 +10,8 @@ body {
 
 .App {
   display: flex;
-  padding: 0.35rem;
   gap: 0.5rem;
+  padding: 0.5rem;
   min-height: 100vh;
 
   background: green;
@@ -17,5 +19,9 @@ body {
   & > * {
     flex: 1;
     background: white;
+  }
+
+  @media (max-width: 768px) {
+    flex-direction: column;
   }
 }
