--- a/src/components/CommentFeed/styles.module.scss
+++ b/src/components/CommentFeed/styles.module.scss
@@ -1,6 +1,8 @@
 .feedContainer {
+  height: calc(100vh - 1rem);
   display: flex;
   flex-direction: column;
 
   padding: 1rem;
+  overflow: auto;
 }
