--- a/src/components/Comment/styles.module.scss
+++ b/src/components/Comment/styles.module.scss
@@ -1,12 +1,29 @@
 .commentContainer {
   display: flex;
   justify-content: space-between;
+  gap: 0.25rem;
+  padding: 0.5rem;
+  border-radius: 4px;
+
+  background: rgba(0, 0, 0, 0.1);
+  border-bottom: 2px solid rgba(0, 0, 0, 0.2);
+
+  &:hover {
+    background-color: rgba(0, 0, 0, 0.15);
+    border-bottom-color: rgba(0, 0, 0);
+  }
+
+  &:active,
+  &:focus {
+    background-color: rgba(0, 0, 0, 0.2);
+  }
 
   & > p {
     word-break: break-word;
   }
 
   & > button {
+    padding: 0.5rem 1rem;
     align-self: center;
   }
 }
