--- a/src/components/Loading/styles.module.scss
+++ b/src/components/Loading/styles.module.scss
@@ -1,9 +1,26 @@
+.loaderContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  height: 100%;
+}
+
 .loader {
   border: 16px solid #f3f3f3;
   border-top: 16px solid #3498db;
   border-radius: 50%;
   width: 120px;
   height: 120px;
+  animation: spin 2s linear infinite;
+}
+
+.buttonLoader {
+  border: 5px solid #f3f3f3;
+  border-top: 5px solid #3498db;
+  border-radius: 50%;
+  width: 25px;
+  height: 25px;
   animation: spin 2s linear infinite;
 }
 
